Resolving compiler warnings